# Solver

./: Cargo.toml  README.md  proto.py
.github/workflows/: publish.yml
src/: binding.rs  lib.rs  main.rs  wasm_bindings.rs
svelte-test/: package.json  svelte.config.js  vite.config.ts
svelte-test/src/routes/: +page.svelte
tests/: all_assigned.rs
