[package]
name = "solver"
version = "0.1.1"
edition = "2024"

[lib]
name = "solver"
crate-type = ["rlib", "cdylib"]

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:getrandom", "dep:web-time"]
debug = ["dep:console_error_panic_hook"]

[dependencies]
rand = { version = "0.10.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.138"
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }
napi = { version = "3.9.4", optional = true, features = ["napi6"] }
napi-derive = { version = "3.5.7", optional = true }
wasm-bindgen = { version = "0.2.126", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

web-time = { version = "1.1.0", optional = true }

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
napi-build = { version = "2.3.2", optional = true }
